# qemu-arm-bare-metal

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  toolchain_arm.cmake
linker/: arm_versatilepb.ld  arm_vexpress_a9.ld
src/: main.c  startup.s  syscalls.c  uart.c
